add admin authentication logis and other apis

--- a/src/app/modules/dashboard-module/home/home.component.html
+++ b/src/app/modules/dashboard-module/home/home.component.html
@@ -1,3 +1,30 @@
-<div class="container">
-    <div class="row"></div>
+<app-header-banner [headerText]="'Home'"></app-header-banner>
+<div class="row">
+    <div class="col-lg-4">
+        <div class="card bg-c-blue order-card">
+            <div class="card-block">
+                <h6 class="m-b-20">All Students</h6>
+                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>1</span></h2>
+                <!-- <p class="m-b-0">Completed Orders<span class="f-right">351</span></p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="card bg-c-green order-card">
+            <div class="card-block">
+                <h6 class="m-b-20">Trending Subjects</h6>
+                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>1</span></h2>
+                <!-- <p class="m-b-0">Completed Orders<span class="f-right">351</span></p> -->
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="card bg-c-yellow order-card">
+            <div class="card-block">
+                <h6 class="m-b-20">All Notices</h6>
+                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>1</span></h2>
+                <!-- <p class="m-b-0">Completed Orders<span class="f-right">351</span></p> -->
+            </div>
+        </div>
+    </div>
 </div>
