--- a/src/app/shared/dashboard-header/dashboard-header.component.html
+++ b/src/app/shared/dashboard-header/dashboard-header.component.html
@@ -157,42 +157,20 @@
                         
                     </li>
                     <li class="nav-item ">
+                        <a class="nav-link" href="#/app/all-students"><i
+                                class="fa fa-fw fa-user-circle"></i>All Students <span
+                                class="badge badge-success">6</span></a>
+                        
+                    </li>
+                    <li class="nav-item ">
                         <a class="nav-link" href="#/app/all-products"><i
-                                class="fa fa-fw fa-user-circle"></i>All Products <span
+                                class="fa fa-fw fa-user-circle"></i>Trending Subjects <span
                                 class="badge badge-success">6</span></a>
                         
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#/app/resell-products"><i
-                                class="fa fa-fw fa-user-circle"></i>Resell Products <span
-                                class="badge badge-success">6</span></a>
-                        
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#/app/order-management"><i
-                                class="fa fa-fw fa-user-circle"></i>Order Management <span
-                                class="badge badge-success">6</span></a>
-                        
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#/app/profit-log"><i
-                                class="fa fa-fw fa-user-circle"></i>Profit Log <span
-                                class="badge badge-success">6</span></a>
-                        
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#/app/my-team"><i
-                                class="fa fa-fw fa-user-circle"></i>My Team <span
-                                class="badge badge-success">6</span></a>
-                        
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#/app/DownloadReport"><i class="fa fa-fw fa-user-circle"></i>Reports <span class="badge badge-success">6</span></a>
-
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#/app/profile"><i
-                                class="fa fa-fw fa-user-circle"></i>My Profile <span
+                        <a class="nav-link" href="#/app/all-products"><i
+                                class="fa fa-fw fa-user-circle"></i>Notices <span
                                 class="badge badge-success">6</span></a>
                         
                     </li>
