create dashboard api and other subject api logics

--- a/src/app/shared/dashboard-header/dashboard-header.component.html
+++ b/src/app/shared/dashboard-header/dashboard-header.component.html
@@ -163,13 +163,13 @@
                         
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#/app/all-products"><i
+                        <a class="nav-link" href="#/app/trending-subjects"><i
                                 class="fa fa-fw fa-user-circle"></i>Trending Subjects <span
                                 class="badge badge-success">6</span></a>
                         
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#/app/all-products"><i
+                        <a class="nav-link" href="#/app/all-notices"><i
                                 class="fa fa-fw fa-user-circle"></i>Notices <span
                                 class="badge badge-success">6</span></a>
                         
