--- a/src/app/modules/dashboard-module/home/home.component.html
+++ b/src/app/modules/dashboard-module/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="card bg-c-blue order-card">
             <div class="card-block">
                 <h6 class="m-b-20">All Students</h6>
-                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>1</span></h2>
+                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>{{ this.dashboardModel.allStudentsCount }}</span></h2>
                 <!-- <p class="m-b-0">Completed Orders<span class="f-right">351</span></p> -->
             </div>
         </div>
@@ -13,7 +13,7 @@
         <div class="card bg-c-green order-card">
             <div class="card-block">
                 <h6 class="m-b-20">Trending Subjects</h6>
-                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>1</span></h2>
+                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>{{ this.dashboardModel.trendingSubjectCount }}</span></h2>
                 <!-- <p class="m-b-0">Completed Orders<span class="f-right">351</span></p> -->
             </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="card bg-c-yellow order-card">
             <div class="card-block">
                 <h6 class="m-b-20">All Notices</h6>
-                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>1</span></h2>
+                <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>{{ this.dashboardModel.noticeCount }}</span></h2>
                 <!-- <p class="m-b-0">Completed Orders<span class="f-right">351</span></p> -->
             </div>
         </div>
